# rust-lattice-simulator

./: .gitignore  Cargo.toml  README.md  validation.ipynb
src/: core.rs  density_plot.rs  main.rs
web-deploy/: README.md  index.html  phase_simulation.wasm
